--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
+        "php": "^8.1",
+        "roave/security-advisories": "dev-latest",
         "monolog/monolog": "^2.10"
+    },
+    "config": {
+        "allow-plugins": {
+        "php-http/discovery": true
+        }
     }
 }
